<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/vezi_produsele"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:onClick="launchSecondActivity"
        android:text="@string/vezi_produsele"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="588dp"
        android:ems="10"
        android:hint="@string/editText_main"
        android:inputType="textPersonName"
        android:text="@string/textPersonName"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="598dp"
        android:layout_height="823dp"
        app:srcCompat="@drawable/imageee"
        tools:layout_editor_absoluteX="-94dp"
        tools:layout_editor_absoluteY="-46dp" />

</android.support.constraint.ConstraintLayout>